--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <script src="https://kit.fontawesome.com/acbb96d20a.js" crossorigin="anonymous"></script>
 </head>
 <body>
+   <div class="background">
     <nav id="home" class="navbar">
         <div><a href="index.html"><p id="name">VISHNU SAKETH</p></a></div>
         <div>
             <ul class="links">
-                <li><a href="https://www.github.com"><i class="fa-brands fa-github" style="color: #000000;"></i></a></li>
+                <li><a href="https://www.github.com"target="_blank"><i class="fa-brands fa-github"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/saketh-undefined-9a242b281" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
                 <li><a href="mailto:psakethvishnu@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
                 <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
@@ -22,7 +23,7 @@
         </div>
     </nav>
 
-    <section>
+    <section style="padding-bottom: 20rem;">
         <div class="profile_cont">
             <div><a href="images/profile.png"><img src="images/profile.png" id="profile_pic"></a></div>
             <div id="p_name">
@@ -38,7 +39,9 @@
         </div>
     </section>
 
-    <section id="about" style="margin: 250px 160px 210px 160px; zoom: 115%;">
+   </div>
+   <div class="grad"></div>
+    <section id="about" style="margin: 0px 160px 210px 160px; zoom: 115%;">
         <p id="abtme">About Me</p>
         <div class="abtme_cont">
             <div style="display: flex; flex-direction: column; max-width: 30%;">
@@ -96,7 +99,7 @@
         <p class="generic-p">Explore My</p>
         <h1 style="text-align: center; font-size: larger; margin: 0%;">Experiences</h1>
         <div class="main-c">
-            <div class="sec-c">
+            <div class="sec-c" id="fst">
                 <h1 class="e-head">Frontend-Development</h1>
                 <div class="last-cont">
                     <div class="exp-a">
@@ -117,7 +120,7 @@
                     <cite id="mtc1">More to Come....</cite>
                 </div>
             </div>
-            <div class="sec-c">
+            <div class="sec-c" id="snd">
                 <h1 class="e-head">Backend-Development</h1>
                 <div class="last-cont">
                     <div class="exp-a">
@@ -140,7 +143,7 @@
         <p class="generic-p">Browse My Recent</p>
         <p class="sub-p">Projects</p>
         <div class="warp-p">
-            <div class="pro-cont">
+            <div class="pro-cont" id="p1">
                 <img src="images/project-1.png" alt="project1" class="pro-img">
                 <p id="pro-p">Project One</p>
                 <div class="p_buttons">
@@ -148,7 +151,7 @@
                     <button id="pro-but">LiveDemo</button>
                 </div>
             </div>
-            <div class="pro-cont">
+            <div class="pro-cont" id="p2">
                 <img src="images/project-2.png" alt="project1" class="pro-img">
                 <p id="pro-p">Project Two</p>
                 <div class="p_buttons">
@@ -156,7 +159,7 @@
                     <button id="pro-but">LiveDemo</button>
                 </div>
             </div>
-            <div class="pro-cont">
+            <div class="pro-cont" id="p3">
                 <img src="images/project-3.png" alt="project1" class="pro-img">
                 <p id="pro-p">Project Three</p>
                 <div class="p_buttons">
