--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
    </div>
    <div class="grad"></div>
-    <section id="about" style="margin: 0px 160px 210px 160px; zoom: 115%;">
+    <section id="about" >
         <p id="abtme">About Me</p>
         <div class="abtme_cont">
-            <div style="display: flex; flex-direction: column; max-width: 30%;">
+            <div class="img-p">
                 <img src="images/premium_photo-1669829639756-bf38f2b1c4a1.avif" class="abtp" style="width: 250px; height:250px; border-radius: 15px;box-shadow: 2px 2px 5px hsl(209, 77%, 80%); margin-bottom: 15px;">
-                <p style="color: hsl(0, 0%, 35%); font-size: 11px; font-family: Poppins, sans-serif; margin-bottom: 20px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut minima ipsa totam, fuga, non illum tempore vero quidem quibusdam facere et. Beatae voluptatibus soluta ut qui harum unde eveniet, corporis ipsa sit laborum! Hic, qui, a libero quis adipisci maiores dolores consequuntur error aliquid excepturi expedita quasi debitis sequi.</p>
+                <p style="color: hsl(0, 0%, 35%); font-size: 11px; font-family: Poppins, sans-serif; margin-bottom: 20px; width: 100%;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut minima ipsa totam, fuga, non illum tempore vero quidem quibusdam facere et. Beatae voluptatibus soluta ut qui harum unde eveniet, corporis ipsa sit laborum! Hic, qui, a libero quis adipisci maiores dolores consequuntur error aliquid excepturi expedita quasi debitis sequi.</p>
             </div>
             <div class="txt">
                 <div class="exp">
@@ -117,7 +117,7 @@
                         <h3>JavaScript</h3>
                         <p>Basic</p>
                     </div>
-                    <cite id="mtc1">More to Come....</cite>
+                   
                 </div>
             </div>
             <div class="sec-c" id="snd">
@@ -134,12 +134,12 @@
                         <p>Intermediate</p>
                     </div>
                 </div>
-                <cite id="mtc2">More to Come....</cite>
+                
             </div>
         </div>
     </section>
 
-    <section id="projects" style="margin: 0px 160px 0px 160px;">
+    <section id="projects">
         <p class="generic-p">Browse My Recent</p>
         <p class="sub-p">Projects</p>
         <div class="warp-p">
@@ -219,4 +219,8 @@
         <p class="generic-p">Copyright © 2024 P.Vishnu Saketh. All Rights Reserved.</p>
     </footer>
 </body>
+<script>
+     var screenWidth = window.innerWidth;
+    console.log('Current screen width: ' + screenWidth + ' pixels');
+</script>
 </html>
