--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
     </section>
 
-    <section id="exp1" style="margin: 0px 160px 210px 160px; zoom: 125%;">
+    <section id="exp1" >
         <p class="generic-p">Explore My</p>
         <h1 style="text-align: center; font-size: larger; margin: 0%;">Experiences</h1>
         <div class="main-c">
