--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section style="padding-bottom: 20rem;">
         <div class="profile_cont">
-            <div><a href="images/profile.png"><img src="images/profile.png" id="profile_pic"></a></div>
+            <div class="hero-img"></div>
             <div id="p_name">
                 <p id="hello">Hello, I'm</p>
                 <p id="pn">Vishnu Saketh</p>
