added new profile img animations v0.6

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section style="padding-bottom: 20rem;">
         <div class="profile_cont">
-            <div class="hero-img"></div>
+            <div class="hero-b"><div class="hero-img"></div></div>
             <div id="p_name">
                 <p id="hello">Hello, I'm</p>
                 <p id="pn">Vishnu Saketh</p>
