Added more Navagation features and optimised the layout

--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
                 <p id="desi">Full-Stack Developer</p>
                 <div class="p_buttons">
                     <button id="cv" onclick="window.open('./pdfs/cv.pdf')">Download CV</button>
-                    <button id="cm" onclick="location.href='./#contact'">Contact Me</button>
+                    <button id="cm" onclick="location.href='#contac'">Contact Me</button>
                 </div>
             </div>
         </div>
+        <div class="nava1" onclick="location.href='#about'"><i class="fa-solid fa-angles-down" style="color: aliceblue;"></i></div>
     </section>
-
+   
    </div>
+
    <div class="grad"></div>
+
     <section id="about" >
         <p id="abtme">About Me</p>
         <div class="abtme_cont">
@@ -93,6 +96,7 @@
                 </table>
             </div>
         </div>
+        <div class="nava" onclick="location.href='#exp1'"><i class="fa-solid fa-angles-down" style="color: rgb(0, 0, 0);"></i></div>
     </section>
 
     <section id="exp1" >
@@ -133,10 +137,17 @@
                         <h3>Java</h3>
                         <p>Intermediate</p>
                     </div>
+                    <div class="exp-a">
+                        <i class="fa-brands fa-git-alt"></i>
+                        <h3>Git</h3>
+                        <p>Intermediate</p>
+                    </div>
                 </div>
                 
             </div>
         </div>
+        <div class="nava2" onclick="location.href='#projects'"><i class="fa-solid fa-angles-down" style="color: rgb(0, 0, 0);"></i></div>
+
     </section>
 
     <section id="projects">
@@ -145,10 +156,10 @@
         <div class="warp-p">
             <div class="pro-cont" id="p1">
                 <img src="images/project-1.png" alt="project1" class="pro-img">
-                <p id="pro-p">Project One</p>
+                <p id="pro-p">Networx</p>
                 <div class="p_buttons">
-                    <button id="pro-but">GitHub</button>
-                    <button id="pro-but">LiveDemo</button>
+                    <button id="pro-but" onclick="location.href='https://github.com/'">GitHub</button>
+                    <button id="pro-but" onclick="location.href='https://www.youtube.com/'">LiveDemo</button>
                 </div>
             </div>
             <div class="pro-cont" id="p2">
@@ -168,9 +179,11 @@
                 </div>
             </div>
         </div>
+        <div class="nava3" onclick="location.href='#contac'"><i class="fa-solid fa-angles-down" style="color: rgb(0, 0, 0);"></i></div>
+
     </section>
 
-    <section id="contac" style="margin: 1S00px 160px 80px 160px; padding-top: 160px;">
+    <section id="contac" >
         <div class="ll-cont">
             <div style="text-align: center;">
                 <p id="ll-p">Get in Touch</p>
@@ -206,6 +219,8 @@
                 </form>
               </div>
         </div>
+        <div class="nava4" onclick="location.href='#home'"><i class="fa-solid fa-angles-down" style="color: rgb(0, 0, 0); transform: rotate(180deg);"></i></div>
+
     </section>
 
     <footer style="margin-bottom: 30px; margin-top: 100px;">
