Beta 0.6 : Nothing big just few minor tweaks

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P.Vishnu Saketh</title>
-    <link rel="icon" type="jpeg" href="images/premium_photo-1669829639756-bf38f2b1c4a1.avif">
+    <link rel="icon" type="jpeg" href="images/abtme.jpg">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/acbb96d20a.js" crossorigin="anonymous"></script>
 </head>
@@ -22,7 +22,6 @@
             </ul>
         </div>
     </nav>
-
     <section style="padding-bottom: 20rem;">
         <div class="profile_cont">
             <div class="hero-b"><div class="hero-img"></div></div>
@@ -38,12 +37,9 @@
             </div>
         </div>
         <div class="nava1" onclick="location.href='#about'"><i class="fa-solid fa-angles-down" style="color: aliceblue;"></i></div>
-    </section>
-   
+    </section>   
    </div>
-
    <div class="grad"></div>
-
     <section id="about" >
         <p id="abtme">About Me</p>
         <div class="abtme_cont">
@@ -98,7 +94,6 @@
         </div>
         <div class="nava" onclick="location.href='#exp1'"><i class="fa-solid fa-angles-down" style="color: rgb(0, 0, 0);"></i></div>
     </section>
-
     <section id="exp1" >
         <p class="generic-p">Explore My</p>
         <h1 style="text-align: center; font-size: larger; margin: 0%;">Experiences</h1>
@@ -149,7 +144,6 @@
         <div class="nava2" onclick="location.href='#projects'"><i class="fa-solid fa-angles-down" style="color: rgb(0, 0, 0);"></i></div>
 
     </section>
-
     <section id="projects">
         <p class="generic-p">Browse My Recent</p>
         <p class="sub-p">Projects</p>
@@ -182,7 +176,6 @@
         <div class="nava3" onclick="location.href='#contac'"><i class="fa-solid fa-angles-down" style="color: rgb(0, 0, 0);"></i></div>
 
     </section>
-
     <section id="contac" >
         <div class="ll-cont">
             <div style="text-align: center;">
@@ -192,7 +185,7 @@
             <form action="action_page.php">
             <div class="container">
                 <div>
-                  <label for="fname" class="l-lable" >First Name:</label>
+                  <label for="fname" class="l-lable" >Name:</label>
                   <input type="text" id="fname" name="firstname" placeholder="  Your name.."style=" width:300px; height : 1.5rem; border-radius: 10px; border: 0; padding: 2px;">
                 </div>
                 <div>
@@ -222,7 +215,6 @@
         <div class="nava4" onclick="location.href='#home'"><i class="fa-solid fa-angles-down" style="color: rgb(0, 0, 0); transform: rotate(180deg);"></i></div>
 
     </section>
-
     <footer style="margin-bottom: 30px; margin-top: 100px;">
         <div class="one">
             <a class="link1" href="#home">Home</a>
