Beta 10.0 :Final Commit on this beta version

--- a/index.html
+++ b/index.html
@@ -104,16 +104,26 @@
                 <div class="exp-a">
                     <i class="fa-brands fa-html5"></i>
                     <h3>HTML</h3>
+                    <div class="eptest" >
+
+                        HTML (Hypertext Markup Language) is the standard markup language for creating web pages and web applications.</div>
+
                     <p>Intermediate</p>
                 </div>
                 <div class="exp-a">
                     <i class="fa-brands fa-css3-alt"></i>
                     <h3>CSS</h3>
+                    <div class="eptest">
+                        CSS (Cascading Style Sheets) is a stylesheet language used to describe the presentation of a document written in HTML or XML, including colors, layouts, and fonts.</div>
+
                     <p>Intermediate</p>
                 </div>
                 <div class="exp-a">
                     <i class="fa-brands fa-js"></i>
                     <h3>JavaScript</h3>
+                    <div class="eptest"id="eptest1">
+                        JavaScript (JS) is a lightweight, interpreted programming language primarily used to add interactivity to web pages.</div>
+
                     <p>Basic</p>
                     </div>
                     
@@ -125,16 +135,22 @@
                     <div class="exp-a">
                         <i class="fa-brands fa-python"></i>
                         <h3>Python</h3>
+                        <div class="eptest">
+                            Python is a high-level, interpreted programming language known for its simplicity and readability.</div>
                         <p>Experienced</p>
                     </div>
                     <div class="exp-a">
                         <i class="fa-brands fa-java"></i>
                         <h3>Java</h3>
+                        <div class="eptest" id="eptestA">
+                            Java is a versatile, object-oriented programming language known for its platform independence and wide usage in various domains including web, mobile apps and enterprise systems.</div>
+
                         <p>Intermediate</p>
                     </div>
                     <div class="exp-a">
                         <i class="fa-brands fa-git-alt"></i>
                         <h3>Git</h3>
+                        <div class="eptest"id="eptest2">Git is a distributed version control system used for tracking changes in source code during software development.</div>
                         <p>Basic</p>
                     </div>
                 </div>
