--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 
   <div class="Design">
   </div>
+    <div class="Design2">
+    </div>
+    <div class="Design3">
+    </div>
+    <div class="Design4">
+    </div>
+    <div class="Design5">
+    </div>
+    <div class="Design6">
+    </div>
+    <div class="Design7">
+    </div>
+    <div class="Design8">
+    </div>
 
   <navbar>
    
