--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saketh-Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <script src="https://kit.fontawesome.com/acbb96d20a.js" crossorigin="anonymous"></script>
     <link rel="icon" href="images/attachment_132785215.png">
 
@@ -199,7 +200,7 @@
         <img src="images/NETWORX-logos.jpeg" alt="project1" class="pro-img" onclick="Displaypopup()" draggable="false">
         <div class="pop-up" id="pop-up" onclick="Remove()">
             <div>Networx</div>
-            <div>Network is a platform for Amrita people to connect.
+            <div>Network is a platdiv for Amrita people to connect.
                 Where Students,Teachers and Staff can Post their achivements and help out others who are in need.
             </div>
             <div><i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i><i class="fa-brands fa-js"></i></div>
@@ -273,7 +274,7 @@
     <p class="P1">Get in touch</p>
     <h2 class="H1">Contact Me</h2>
     <div class="contact-content">
-      <form action="data.js" id="form">
+      <div action="data.js" id="form">
 
         <div class="content-items">
           <label>Name:</label>
@@ -301,7 +302,7 @@
         <textarea id="subject" name="subject" placeholder=" Write Something.."  ></textarea>
     </div>
     <input type="submit" id="submit">
-      </form>
+      </div>
     </div>
   </div>
   <footer style="margin-bottom: 30px; margin-top: 100px;">
