added theme switcher

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 
 </head>
 <body>
-
+<div class="theme-switcher">
+  <button id="theme-c"></button>
+  <button id="white"></button>
+  <button id="high-c"></button>
+  <button id="pink"></button>
+  <button id="gold"></button>
+  <button id="purp"></button>
+  <button id="norm"></button>
+</div>
   <div class="Design">
   </div>
     <div class="Design2">
