added more projects slider

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
   </div>
 
   <div class="aboutme" id="about">
-    <div class="nav1" onclick="location.href='#exp1'"><i class="fa-solid fa-angles-down" style="color: aliceblue;"></i></div>
     
     <p class="P1">Know</p>
     <h2 class="H1">About Me</h2>
@@ -134,7 +133,6 @@
   </div>
 
   <div class="Experience" id="exp1">
-    <div class="nav1" onclick="location.href='#projects'"><i class="fa-solid fa-angles-down" style="color: aliceblue;"></i></div>
 
     <p class="P1">Explore</p>
     <h2 class="H1">My Expertise</h2>
@@ -199,8 +197,42 @@
   </div>
 
   <div class="projects" id="projects">
-    <div class="nav1" onclick="location.href='#contac'"><i class="fa-solid fa-angles-down" style="color: aliceblue;"></i></div>
-
+    <div class="mp-button" onclick="location.href = '#mp_projects'">
+      <p><</p>
+    </div>
+    <div class="more-projects">
+      
+      <h5>PROJECTS</h5>
+      <div class="mp-content" id="mp_projects">
+            <h3>Major-Projects:</h3>
+            <div class="major-projects">
+              <div class="mp-card"><img src="./images/NETWORX-logos.jpeg" alt="pic"></div>
+              <div class="mp-card"><img src="./images/TASK MANAGER-logos.jpeg" alt="pic"></div>
+              <div class="mp-card"><img src="./images/TRACKER-logos.jpeg" alt="pic"></div>
+              <div class="mp-card"> <img src="./images/clock.jpeg" alt="pic"></div>
+              <div class="mp-card"><img src="./images/NETWORX-logos.jpeg" alt="pic"></div>
+              <div class="mp-card"><img src="./images/TASK MANAGER-logos.jpeg" alt="pic"></div>
+            </div>
+            <h3 style="margin-top: 20px;">Learning-Projects:</h3>
+            <div class="minor-projects">
+              <div class="mp-card"><img src="./images/Temp_converter.png" alt="pic"></div>
+              <div class="mp-card"><img src="./images/number_counter.jpeg" alt="pic"></div>
+              <div class="mp-card"><img src="./images/Dice.png" alt="pic"></div>
+              <div class="mp-card"><img src="./images/Temp_converter.png" alt="pic"></div>
+              <div class="mp-card"><img src="./images/Dice.png" alt="pic"></div>
+              <div class="mp-card"><img src="./images/number_counter.jpeg" alt="pic"></div>
+              <div class="mp-card"><img src="./images/Dice.png" alt="pic"></div>
+              <div class="mp-card"><img src="./images/Temp_converter.png" alt="pic"></div>
+              <div class="mp-card"><img src="./images/number_counter.jpeg" alt="pic"></div>
+              <div class="mp-card"><img src="./images/Dice.png" alt="pic"></div>
+              <div class="mp-card"><img src="./images/Temp_converter.png" alt="pic"></div>
+              <div class="mp-card"><img src="./images/number_counter.jpeg" alt="pic"></div>
+            </div>
+            <div class="mp-close">X</div> 
+      </div>
+  
+    </div>
+   
     <p class="P1">Check out</p>
     <h2 class="H1">My Projects</h2>
     <div class="projects-content">
